<resources>
    <string name="app_name">Jitu Pune</string>
    <string name="company_name">Jeetu Pune</string>
    <string name="email">Email</string>
    <string name="send_email">Send Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="tab_text_1">Tender</string>
    <string name="tab_text_2">Resale</string>
    <string name="tab_text_3">Orders</string>
    <string name="price">Price</string>
    <string name="update_price">Update Price</string>
    <string name="quantity">Quantity</string>
    <string name="mill_name">Mill Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_resale">Resale</string>
    <string name="title_tender">Tender</string>
    <string name="title_orders">Orders</string>
    <string name="title_users">Users</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already_account">Already Have an Account?</string>
    <string name="capture_photo">Capture photo...</string>
    <string name="default_notification_channel_id">sugarbroker</string>
    <string name="notifications_admin_channel_description">Message Sugar Broker</string>
    <string name="default_notification_channel_name" translatable="true">sugarbroker</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_subscribed">Subscribed to sugarbroker topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="company_logo">Company Logo</string>
    <string name="Rs">\u20B9</string>
    <string name="contact">Contact</string>
    <string name="update">Update</string>
    <string name="type">Type</string>
    <string name="gst">GST</string>
    <string name="quantityprice">Quantity Price</string>
    <string name="totalprice">Total Price</string>
    <string name="status">Status</string>
    <string name="review">Review</string>
    <string name="cancel">Cancel</string>
    <string name="buy">Buy</string>
    <string name="resale_detail">Resale Details</string>
    <string name="tender_detail">Tender Details</string>
    <string name="user_detail">User Details</string>
    <string name="order_detail">Order Details</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="message">Message</string>
    <string name="app_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="new_tender_added">New Tender Added</string>
    <string name="new_resale_added">New Resale Added</string>
    <string name="tender_name">Tender Name</string>
    <string name="resale_name">Resale Name</string>
    <string name="delete_account">Delete Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_text">Forgot password? Reset here</string>
    <string name="buy_resale_sugar">Buy Resale Sugar</string>
    <string name="buy_tender_sugar">Buy Tender Sugar</string>
    <string name="jitendra_r_kothari">Jitendra R Kothari</string>
    <string name="admin_phone_number">(942)200-3575</string>
    <string name="mobile">Mobile</string>
    <string name="personal">Personal</string>
    <string name="admin_landline_phone">+912024270525</string>
    <string name="admin_email">jitendrarkothari@gmail.com</string>
    <string name="pune_maharashtra">Pune, Maharashtra</string>
    <string name="market_yard_gultekdi">Market Yard Gultekdi</string>
    <string name="office">Office</string>
    <string name="review_resale_detail">Review Resale Detail</string>
    <string name="review_tender_details">Review Tender Details</string>
    <string name="tender_details">Tender Details</string>
    <string name="settings">Settings</string>
    <string name="push_notification">Push Notification</string>
    <string name="order_details">Order Details</string>
    <string name="open">Open</string>
    <string name="transit">Transit</string>
    <string name="closed">Closed</string>
    <string name="resale_details">Resale Details</string>
</resources>
