<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:weightSum="10"
    android:baselineAligned="false">

    <RelativeLayout
        android:background="@drawable/selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tvIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_drawable"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/tvIcon"
            android:layout_toRightOf="@+id/tvIcon"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mill_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name_textview"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/tvIcon"
            android:layout_toRightOf="@+id/tvIcon"
            android:text="@string/mill_name"
            android:textColor="@color/colorPrimaryLight"
            />

        <TextView
            android:id="@+id/quantity_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mill_name_textview"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/tvIcon"
            android:layout_toRightOf="@+id/tvIcon"
            android:text="@string/quantity"
            android:textColor="@color/colorPrimaryLight"
            />

        <Button
            android:id="@+id/ivEdit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/tvIcon"
            android:layout_toRightOf="@+id/tvIcon"
            android:contentDescription="@string/edit"
            android:visibility="visible"
            tools:visibility="visible"
            android:backgroundTint="@color/colorPrimaryLight3"
            android:text="@string/edit"
            />

    </RelativeLayout>

</LinearLayout>